--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
+beautifulsoup4==4.5.1
+bs4==0.0.1
+cycler==0.10.0
+matplotlib==1.5.1
 numpy==1.11.1
 pandas==0.18.1
+pyparsing==2.1.6
 python-dateutil==2.5.3
 pytz==2016.6.1
+requests==2.11.0
+scipy==0.18.0
 six==1.10.0
