--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   "devDependencies": {
     "babel-cli": "^6.11.4",
     "babel-preset-es2015": "^6.13.2",
-    "request": "^2.74.0"
+    "request": "^2.74.0",
+    "xml2js": "^0.4.17"
   },
   "dependencies": {
+    "dotenv": "^2.0.0",
     "request": "^2.74.0"
   }
 }
