--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,9 @@ APIFetch/models/house-compiled.js.map
 node_modules/
 q3project.iml
 .git/
-.Notes
-unused/
+.Notes/
 env/
 winnie/
+*.pyc
 
 APIFetch/.env
